<resources>
    <string name="app_name">abcJobsgrp23</string>
    <string name="title_home">Seccion entrevistas</string>
    <string name="title_dashboard">Seccion prueba tecnica</string>
    <string name="title_notifications">Seccion prueba desempeño</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="candidato">Candidato</string>
    <string name="abc_jobs">ABC JOBS</string>
    <string name="abc_jobs_empresas">ABC JOB EMPRESAS</string>
    <string name="empresa">Empresa</string>
    <string name="nombre_candidato">Nombre de candidato</string>
    <string name="nombre_empresa">Nombre de empresa</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="pais">    País*</string>
    <string name="titulo">Título</string>
    <string name="ver_detalles">ver detalles</string>
    <string name="editar_detalles">editar detalles</string>
    <string name="mostrar_fecha">Mostrar Fecha</string>
    <string name="mostrar_hora">Mostrar Hora</string>
    <string name="hora_seleccionada">Hora seleccionada:</string>
    <string name="fecha_seleccionada">fecha seleccionada</string>
    <string name="descripci_n">Descripción</string>
    <string name="estado_final">Estado Final</string>
    <string name="observaciones">Observaciones</string>
    <string name="guardar">Guardar</string>
    <string name="resultado_entrevista">Resultado Entrevista</string>
    <string name="entrevista">Entrevista</string>
    <string name="p_tecnica">P.Tecnica</string>
    <string name="p_desempe_o">P.Desempeño</string>
    <string name="descripcion">descripcion</string>
</resources>