<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_empresa_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/abc_jobs_empresas"
        android:layout_width="186dp"
        android:layout_height="95dp"
        android:layout_marginTop="68dp"
        android:text="@string/abc_jobs_empresas"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textEmpresaUsername"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:ems="10"
        android:autofillHints=""
        android:inputType="text"
        android:hint="@string/nombre_empresa"
        app:layout_constraintBottom_toTopOf="@+id/textEmpresaPasword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abc_jobs_empresas" />

    <EditText
        android:id="@+id/textEmpresaPasword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginEmpresaAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnLoginEmpresaAction"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:text="@string/iniciar_sesion"
        app:layout_constraintBottom_toTopOf="@+id/btnRegisterEmpresaAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegisterEmpresaAction"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="188dp"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>