<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/candidato_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abc_jobs"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nombre_candidato"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/register_pasw_1_candidato"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/register_pasw_1_candidato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="312dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnLoginCandidato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_pasw_1_candidato"
        android:text="@string/iniciar_sesion"
        app:layout_constraintBottom_toTopOf="@+id/btnRegisterCandidato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_pasw_1_candidato"
        app:layout_constraintVertical_bias="0.832"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnRegisterCandidato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLoginCandidato"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_pasw_1_candidato"
        app:layout_constraintVertical_bias="0.645"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>